[gd_scene load_steps=19 format=2]

[ext_resource path="res://source/scenes/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/LittleThings-ZX5Z.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/ui_menu_button.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ui_menu_button_a1.png" type="Texture" id=4]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00448431, 0.26158, 0.340599, 1 )
colors = PoolColorArray( 0.407843, 0.760784, 0.827451, 1, 0.608187, 0.921637, 0.984327, 1, 0.995, 1, 0.85, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 2 )
width = 1400
height = 1000
fill_to = Vector2( 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 125
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="Animation" id=10]
resource_name = "Area1Button"
length = 1.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Area1Button:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.32 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Area2Button:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.46 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Area3Button:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Area4Button:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.32 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.03, 0.74 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.407843, 0.760784, 0.827451, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MarginContainer/VBoxContainer/TitleLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.01, 0.49 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Area1Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.407843, 0.760784, 0.827451, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/VBoxContainer/TitleLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sky" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 2, -140 )
texture = SubResource( 8 )
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.407843, 0.760784, 0.827451, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 80
custom_constants/margin_top = 50
custom_constants/margin_left = 80
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 80.0
margin_top = 50.0
margin_right = 944.0
margin_bottom = 550.0
custom_constants/separation = 25

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 864.0
margin_bottom = 125.0
custom_colors/font_color = Color( 0.207843, 0.168627, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
text = "Scribble Cars"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 864.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 864.0
margin_bottom = 170.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Area1Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 427.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="Area2Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 437.0
margin_right = 864.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 6 )
disabled = true
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 864.0
margin_bottom = 350.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Area3Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 427.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 6 )
disabled = true
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="Area4Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 437.0
margin_right = 864.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 6 )
disabled = true
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Area1Button = SubResource( 10 )
anims/RESET = SubResource( 11 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
